Fix footer overflow.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -284,6 +284,7 @@ html {
 	min-height: 100%;
 }
 body {
+	padding: 0 0 20px 0;
 	h1 {
 		color: #333;
 	}
